erDiagram
    seasons {
        int id PK
        string slug UK
        string label
        text overview
        string hero_image_url
        datetime start_date
        datetime end_date
    }

    productions {
        int id PK
        string name
        text description
        string excerpt
        int runtime
        string age_recommendation
        text content_advisory
        string promo_video_url
        string ticket_purchase_url
        int season_id FK
        int work_id FK
    }

    works {
        int id PK
        string title
        text description
        text synopsis
    }

    work_creators {
        int work_id FK
        int person_id FK
    }

    people {
        int id PK
        string first_name
        string last_name
        text biography
        string headshot_url
    }

    production_people {
        int production_id FK
        int person_id FK
        string role_type
        string role
    }

    events {
        int id PK
        int production_id FK
        datetime starts_at
        datetime ends_at
        string status
        string ticket_url
        text notes
    }

    venues {
        int id PK
        string name
        string address
        string city
        string state
        string postcode
        string country
        int capacity
        text description
        text accessibility_info
        string website_url
        string map_url
    }

    sponsors {
        int id PK
        string name
        string logo_url
        string website_url
    }

    sponsorships {
        int id PK
        int sponsor_id FK
        int season_id FK
        int production_id FK
    }

    organizations {
        int id PK
        string name
        string slug UK
        text mission_statement
        int founded_year
        string logo_url
        string website_url
        json social_links
        string address
    }

    taxonomies {
        int id PK
        string slug
        string label
        text description
    }

    terms {
        int id PK
        string name
        string slug
        int taxonomy_id FK
    }

    users {
        int id PK
        string email UK
        datetime registered_at
    }

    seasons ||--o{ productions : "has"
    productions }o--|| works : "stages"
    works }o--o{ people : "work_creators"
    productions ||--o{ production_people : "involves"
    people ||--o{ production_people : "participates in"
    productions ||--o{ events : "schedules"
    events }o--o| venues : "held at"
    sponsors ||--o{ sponsorships : "provides"
    sponsorships }o--o| seasons : "sponsors"
    sponsorships }o--o| productions : "sponsors"
    taxonomies ||--o{ terms : "contains"
